small udpates to webpage

--- a/classes/math33fall2021/indextest.html
+++ b/classes/math33fall2021/indextest.html
@@ -31,6 +31,7 @@
   			<ul>
   				<li> <a href="./resources/syllabus.pdf">Syllabus</a> </li>
   				<li> <a href="https://activecalculus.org/vector/frontmatter.html">Actice Calculus</a> </li>
+  				<li> <a href="https://drive.google.com/file/d/1ITpzhrpeGSEhkgwm7PEbskp7teR6LH7e/view">APEX Calculus</a> </li>
   				<li> <a href="https://www.gradescope.com/">Gradescope</a> </li>
   				<li> <a href="./resources/reflections.pdf">Reflections</a> </li>
   				<li> <a href="https://c3d.libretexts.org/CalcPlot3D/index.html">CalcPlot3D</a> </li>
@@ -160,240 +161,327 @@
 			    </details>
 	    	</section>
 
-			<section id="calendar">
+	    	<section id="calendar">
 				<h2> Course calendar </h2>
 				<table class="calendar">
-					<col width="10">
-					<col width="70">
+					<col width="50">
+					<col width="90">
+					<col width="200">
+					<col width="200">
 					<col width="100">
-					<col width="100">
-					<col width="100">
-					<col width="150">
 					<tr>
 						<th> Week </th>
 						<th> Date </th>
 						<th> Class Content </th>
-						<th> Daily Prep </th>
-						<th> Videos </th>
-						<th> Lucas' Hot Take </th>						
+						<th> Video </th>
+						<th> Khan Video </th>						
 					</tr>
 					<tr>
 						<td> 1 </td>
-						<td> 11 Feb. </td>
-						<td> Introductions </td>
+						<td> 30 Aug. </td>
+						<td> First day shenanigans </td>
 						<td> </td>
 						<td> </td>
-						<td> <a href="https://youtu.be/Yf3tE7tXYLI">Why I like Multivariable Calculus</a> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 1 Sept. </td>
+						<td> 9.1: Function of Several Variables </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 3 Sept. </td>
+						<td> 9.2: Vectors </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 2 </td>
-						<td> 16 Feb. </td>
-						<td> 9.1, 9.2, 9.3, 9.4</td>
-						<td> <a href="./dailyprep/34DP.02.16.21.pdf">Daily Prep</a> </td>
-						<td> 
-							<a href="https://youtu.be/QTUx6IFYiO8">9.1</a>, 
-							<a href="https://youtu.be/mzaOytS6dog">9.2</a>, 
-							<a href="https://youtu.be/buLmMA_Z3_k">9.3</a>, 
-							<a href="https://youtu.be/mdwqZS1I838">9.4</a> 
-						</td>
-						<td> Bonus topic: <a href="./bonusproblems/quaternions.pdf">Quaternions</a> </td>
+						<td> 6 Sept. </td>
+						<td> NO CLASS </td>
+						<td>  </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 18 Feb. </td>
-						<td> 9.5, 9.6 </td>
-						<td> <a href="./dailyprep/34DP.02.18.21.pdf">Daily Prep</a> </td>
-						<td> 
-							<a href="https://youtu.be/yWyC1SwpTrs">9.5</a>, 
-							<a href="https://youtu.be/01AYoaGCRVs">9.6</a></td>
+						<td> 8 Sept. </td>
+						<td> 9.3: The Dot Product </a> </td>
+						<td>  </td>
 						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 10 Sept. </td>
+						<td> 9.4: The Cross Product </td>
+						<td> </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
-						<td> 23 Feb. </td>
-						<td> 9.7, 9.8 </td>
-						<td> <a href="./dailyprep/34DP.02.23.21.pdf">Daily Prep</a> </td>
-						<td> <a href="https://youtu.be/-J0XHyJmpUA">9.7</a>, 
-							<a href="https://youtu.be/nmj-0tavw3A">9.8</a> </td>
-						<td> Bonus question: <a href="./bonusproblems/necurve.pdf">NE curve</a> </td>
+						<td> 13 Sept. </td>
+						<td> 9.5: Lines and Planes </td>
+						<td>  </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 25 Feb. </td>
-						<td> 10.1, 10.2 </td>
-						<td> <a href="./dailyprep/34DP.02.25.21.pdf">Daily Prep</a></td>
-						<td> <a href="https://youtu.be/ndU_RK2GYRA">10.1</a>, 
-							<a href="https://youtu.be/zx0IGg3SpAE">10.2 </a> </td>
+						<td> 15 Sept. </td>
+						<td> 9.6: Vector-Valued Functions </td>
+						<td>  </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 17 Sept. </td>
+						<td> 9.7: Der and Int of VV-Funcs </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 4 </td>
-						<td> 2 March </td>
-						<td> 10.3, 10.4 </td>
-						<td> <a href="./dailyprep/34DP.03.02.21.pdf">Daily Prep</a> </td>
-						<td> <a href="https://youtu.be/nFig9hbQZ3U">10.3</a>, 
-							<a href="https://youtu.be/8YBxKp5RN7M">10.4 </a> </td>
-						<td> <a href="https://youtu.be/H3XsDc6DViA">Rant about Clairaut's theorem</a> </td>
+						<td> 20 Sept. </td>
+						<td> 9.8: Arc Length and Curvature  </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
+						<td>  </td>
+						<td> 22 Sept. </td>
+						<td> 10.1: Limits </td>
 						<td> </td>
-						<td> 4 March </td>
-						<td> 10.4, 10.5 </td>
-						<td> <a href="./dailyprep/34DP.03.04.21.pdf">Daily Prep</a>, <a href="./resources/Colley-derivative.pdf">10.4 extra</a>, <a href="./resources/Colley-chain.pdf">10.5 extra</a> </td>
-						<td> <a href="https://youtu.be/Bi0m_Q_SflY">10.4 extra</a>, <a href="https://youtu.be/jznjxA7qK60">10.5</a>, 
-							<a href="https://youtu.be/Qy3PZiPqw24">10.5 extra </a> </td>
-						<td> </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 24 Sept. </td>
+						<td> 10.2: First-Order Partial Derivatives </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
-						<td> 9 March </td>
-						<td> 10.6 </td>
-						<td> <a href="./dailyprep/34DP.03.09.21.pdf">Daily Prep</a> </td>
-						<td> <a href="https://youtu.be/WPa60m8VFzc">10.6</a>  </td>
-						<td> </td>
+						<td> 27 Sept. </td>
+						<td> 10.3: Second-Order Partial Derivatives </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
-						<td> </td>
-						<td> 11 March </td>
-						<td> 10.7 </td>
-						<td> <a href="./dailyprep/34DP.03.11.21.pdf">Daily Prep</a> </td>
-						<td> <a href="https://youtu.be/xpN4QnQwItU">10.7</a> , <a href="https://youtu.be/8jHvMyooxSQ">The Hessian</a> </td>
-						<td> </td>
+						<td>  </td>
+						<td> 29 Sept. </td>
+						<td> 10.4: Linearization </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 1 Oct. </td>
+						<td> 10.5: The Chain Rule </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
-						<td> 16 March </td>
-						<td> 11.1, 11.2 </td>
-						<td> <a href="./dailyprep/34DP.03.16.21.pdf">Daily prep</a>  </td>
-						<td> <a href="https://youtu.be/XR8iVxdyYs8">11.1</a> , <a href="https://youtu.be/VEqbIHxTLDY">11.2</a>  </td>
+						<td> 4 Oct. </td>
+						<td> 10.6: Directional Der. and Gradient </td>
+						<td>  </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 6 Oct. </td>
+						<td> 10.7: Optimization </td>
+						<td> </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 8 Oct. </td>
+						<td> 10.8: Lagrange Multipliers  </td>
+						<td>   </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td> 7 <Oct>
+						<td> 11 Oct. </td>
+						<td> FALL BREAK  </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 18 March </td>
-						<td> 11.3, 11.5 </td>
-						<td> <a href="./dailyprep/34DP.03.18.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/d-Cn9p-D_5A">11.3</a>, <a href="https://youtu.be/SurY43pcVZE">11.5</a>  </td>
+						<td> 13 Oct. </td>
+						<td> FALL BREAK  </td>
 						<td> </td>
-					</tr>
-					<tr>
-						<td> 7 </td>
-						<td> 23 March </td>
-						<td> 11.6 </td>
-						<td> <a href="./dailyprep/34DP.03.23.21.pdf">Daily prep</a>  </td>
-						<td> <a href="https://youtu.be/gaXp4MzFA_s">11.6</a> </td>
-						<td> </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 25 March </td>
-						<td> Spring Break </td>
-						<td> </td>
-						<td> </td>
-						<td> </td>
+						<td> 15 Oct. </td>
+						<td> FALL BREAK  </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 8 </td>
-						<td> 30 March </td>
-						<td> 11.7 </td>
-						<td> <a href="./dailyprep/34DP.03.30.21.pdf">Daily prep</a></td>
-						<td> <a href="https://youtu.be/rpTZoiNWH0g">11.7</a></td>
+						<td> 18 Oct. </td>
+						<td> 11.1: Double Riemann Sums </td>
+						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
-						<td> </td>
-						<td> 1 April </td>
-						<td> 11.8 </td>
-						<td> <a href="./dailyprep/34DP.04.01.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/I2oEoymy82g">11.8</a></td>
+						<td>  </td>
+						<td> 20 Oct. </td>
+						<td> 11.2: Iterated Integrals </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 22 Oct. </td>
+						<td> 11.3: Double Integrals </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
-						<td> 6 April </td>
-						<td> 11.9 </td>
-						<td> <a href="./dailyprep/34DP.04.06.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/fsXgkMK-MAA">11.9</a></td>
+						<td> 25 Oct. </td>
+						<td> 11.4: Applications of Double Int </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 27 Oct. </td>
+						<td> 11.5: Polar Coordinates </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
-						<td> </td>
-						<td> 8 April </td>
-						<td> Line and Surface Integrals </td>
-						<td> <a href="./dailyprep/34DP.04.08.21.pdf">Daily prep</a>, <a href="./resources/scalarlineint.pdf">Reading 1</a>, <a href="./resources/scalarsurfaceint.pdf">Reading 2</a> </td>
-						<td> <a href="https://youtu.be/FXevK2LkLzk">Scalar line and surface integrals</a></td>
-						<td> </td>
+						<td>  </td>
+						<td> 29 Oct. </td>
+						<td> 11.6: Surfaces </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 10 </td>
-						<td> 13 April </td>
-						<td> 12.1, 12.2 </td>
-						<td> <a href="./dailyprep/34DP.04.13.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/XmmDgyeTU-0">12.1</a>, <a href="https://youtu.be/uoLONXyCduk">12.2</a> </td>
+						<td> 1 Nov. </td>
+						<td> 11.7: Triple Integrals </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 3 Nov. </td>
+						<td> 11.8: Cylindrical and Spherical Coordinates </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 15 April </td>
-						<td> 12.3 </td>
-						<td> <a href="./dailyprep/34DP.04.15.21.pdf">Daily prep</a>  </td>
-						<td> <a href="https://youtu.be/A2GNoTSSelg">12.3</a> </td>
-						<td> </td>
+						<td> 5 Nov. </td>
+						<td> 11.9: Change of Variables </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 11 </td>
-						<td> 20 April </td>
-						<td> 12.4 </td>
-						<td> <a href="./dailyprep/34DP.04.20.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/VEcy1wm92bU">12.4</a> </td>
+						<td> 8 Nov. </td>
+						<td> Line and Surface Integrals </td>
 						<td> </td>
+						<td>  </td>
 					</tr>
 					<tr>
+						<td>  </td>
+						<td> 10 Nov. </td>
+						<td> 12.1: Vector Fields </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 12 Nov. </td>
+						<td> 12.2: Line Integrals </td>
 						<td> </td>
-						<td> 22 April </td>
-						<td> 12.5, 12.6 </td>
-						<td> <a href="./dailyprep/34DP.04.22.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/bWOEWoq-fX8">12.5</a>, <a href="https://youtu.be/2-Zqt2Faduc">12.6</a>, <a href="https://youtu.be/2IsVhUqOyWE">Del Operator</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 12 </td>
-						<td> 27 April </td>
-						<td> 12.7 </td>
-						<td> <a href="./dailyprep/34DP.04.27.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/HX3yXuN_F7I">12.7</a> </td>
-						<td> </td>
+						<td> 15 Nov. </td>
+						<td> 12.3: Calculating Line Integrals </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
-						<td> </td>
-						<td> 29 April </td>
-						<td> 12.8 </td>
-						<td> <a href="./dailyprep/34DP.04.29.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/t9bZe63jfNM">12.8</a> </td>
-						<td> </td>
+						<td>  </td>
+						<td> 17 Nov. </td>
+						<td> 12.4: Path-Independent Vector Fields </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 19 Nov. </td>
+						<td> 12.5: Divergence </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
-						<td> 4 May </td>
-						<td> 12.9 </td>
-						<td> <a href="./dailyprep/34DP.05.04.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/UdSScW5PKmY">12.9</a> </td>
+						<td> 22 Nov. </td>
+						<td> 12.6: Curl </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 6 May </td>
-						<td> 12.10 </td>
-						<td> <a href="./dailyprep/34DP.05.08.21.pdf">Daily prep</a> </td>
-						<td> <a href="https://youtu.be/2AZTjQBKqN8">12.10</a> </td>
+						<td> 24 Nov. </td>
+						<td> ??? </td>
 						<td> </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 26 Nov. </td>
+						<td> NO CLASS  </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 14 </td>
-						<td> Finals </td>
+						<td> 29 Nov. </td>
+						<td> 12.7: Green's Theorem</td>
 						<td> </td>
 						<td> </td>
-						<td> <a href="https://youtu.be/I_6kx5d26nw">Conservative Vector Fields Theorem</a>, <a href="https://youtu.be/siUVqlH0ZPE">The Three Big Integral Theorems</a> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 1 Dec. </td>
+						<td> 12.8: Flux Integrals </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 3 Dec. </td>
+						<td> 12.9: Stokes' Theorem </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> 15 </td>
+						<td> 6 Dec. </td>
+						<td> 12.10: The Divergence Theorem </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 8 Dec. </td>
+						<td> ??? </td>
+						<td> </td>
 						<td> </td>
 					</tr>
 				</table>
