--- a/teaching.html
+++ b/teaching.html
@@ -96,6 +96,25 @@
     </details>
     <br>
 
+  <h3>Ungrading</h3>
+    <ul>
+      <li>
+        <a href="https://www.alfiekohn.org/article/case-grades/">The Case Against Grades</a> by Alfie Kohn
+      </li>
+      <li>
+        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4041495/">Teaching More by Grading Less (or Differently)</a> by Schinske and Tanner
+      </li>
+      <li>
+        <a href="https://www.jessestommel.com/ungrading-an-faq/">https://www.jessestommel.com/ungrading-an-faq/</a> by Jesse Stommel (also many other great blog posts about ungrading on his website)
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">Ungrading as resistance (a video)</a> by Spencer Bagley
+      </li>
+      <li>
+        <a href="https://www.powells.com/book/ungrading-9781949199826">Ungrading: Why Rating Students Undermines Learning (and What to Do Instead)</a> 
+      </li>
+    </ul>
+
   <h3>Teaching inspiration</h3>
     <ul>
       <li>
@@ -128,16 +147,6 @@
       </li>
       <li>
         <a href="https://ryancordell.org/teaching/contract-grading/">Contract grading</a>
-      </li>
-    </ul>
-
-  <h3>Ungrading</h3>
-    <ul>
-      <li>
-        <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">A video that might change the way you think about grading</a>
-      </li>
-      <li>
-        <a href="https://www.chronicle.com/article/grades-can-hinder-learning-what-should-professors-use-instead/">Ungrading (paywall!)</a>
       </li>
     </ul>
 
