small udpates to webpage

--- a/teaching.html
+++ b/teaching.html
@@ -99,19 +99,19 @@
   <h3>Ungrading</h3>
     <ul>
       <li>
-        <a href="https://www.alfiekohn.org/article/case-grades/">The Case Against Grades</a> by Alfie Kohn
+        <a href="https://www.alfiekohn.org/article/case-grades/">The Case Against Grades</a> an article by Alfie Kohn
       </li>
       <li>
-        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4041495/">Teaching More by Grading Less (or Differently)</a> by Schinske and Tanner
+        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4041495/">Teaching More by Grading Less (or Differently)</a> a meta-study by Schinske and Tanner
       </li>
       <li>
-        <a href="https://www.jessestommel.com/ungrading-an-faq/">https://www.jessestommel.com/ungrading-an-faq/</a> by Jesse Stommel (also many other great blog posts about ungrading on his website)
+        <a href="https://www.jessestommel.com/ungrading-an-faq/">Ungrading: an FAQ</a> an article by Jesse Stommel (also many other great blog posts about ungrading on his website)
       </li>
       <li>
-        <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">Ungrading as resistance (a video)</a> by Spencer Bagley
+        <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">Ungrading as resistance</a> a video by Spencer Bagley
       </li>
       <li>
-        <a href="https://www.powells.com/book/ungrading-9781949199826">Ungrading: Why Rating Students Undermines Learning (and What to Do Instead)</a> 
+        <a href="https://www.powells.com/book/ungrading-9781949199826">Ungrading: Why Rating Students Undermines Learning (and What to Do Instead)</a> a book by many authors
       </li>
     </ul>
 
