small udpates to class webpages

--- a/teaching.html
+++ b/teaching.html
@@ -135,6 +135,9 @@
       <li>
         <a href="http://danaernst.com/setting-the-stage/">Setting the stage</a>
       </li>
+      <li>
+        <a href="https://www.weareteachers.com/micro-affirmations-in-the-classroom/"> Micro-affermations</a> and <a href="https://www.dropbox.com/s/g9igfzl5u55lvyj/Su_Mathematical%20Microaggressions.pdf?dl=0"> Micro-aggressions </a>
+      </li>
     </ul>
 
   <h3>Mastery based grading</h3>
