--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="programming.html">Programming</a>
       <a href="teachingandlearning.html">Teaching Learning</a>
       <a href="outreach.html">Outreach</a>
       <a href="set.html">SET</a>
+      <a href="programming.html">Programming</a>
       <a href="cv.html">CV/Resume</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="links.html">Links</a>
@@ -43,20 +43,20 @@
       <h1>Lucas Van Meter</h1>
       <img alt="picture of Lucas Van Meter" src="img/lucas.jpg" style="width:30%;object-fit: cover;float:right;">
       <p>
-        I am a programmer, mathematician, data scientest, and problem solver. This website is a place to find some of my own work and links to others work that I feel is important. 
+        I am an educator, a mathematician, a data scientest, and problem solver. This website is a place to find some of my own work and links to others work that I feel is important. 
         <br>
 
         <h3>My interests include:</h3>
       </p>
       <ul>
-        <li>Programming</li>
-        <li>Nuerel nets and machine learning</li>
       	<li>Teaching and learning</li>
       	<li>Social justice</li>
         <li>The card game SET and related mathematics</li>
         <li>Algebraic geometry</li>
+        <li>Voting theory</li>
+        <li>Data Science</li>
+        <li>Nuerel nets and machine learning</li>
         <li>Computer vision</li>
-        <li>Voting theory and non-transitive dice</li>
       </ul>
     </section>
 
