some stuff for a puzzle hunt

--- a/puzzlehunt/index.html
+++ b/puzzlehunt/index.html
@@ -17,37 +17,45 @@
 
 <h3> Household Machines</h3>
 
-<p> Clue 5 (9 letters) : <audio controls><source src="sounds/lawnmower.wav">This media cannot be played.</source></audio></p>
+<p> Clue 1 (9 letters) : <audio controls><source src="sounds/lawnmower.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 6 (6 letters + "machine"): <audio controls><source src="sounds/sewing machine.wav">This media cannot be played.</source></audio></p>
+<p> Clue 2 (6 letters + "machine"): <audio controls><source src="sounds/washing machine.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 7 (6 letters): <audio controls><source src="sounds/vacuum.wav">This media cannot be played.</source></audio></p>
+<p> Clue 3 (6 letters): <audio controls><source src="sounds/vacuum.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 8 (9 letters): <audio controls><source src="sounds/microwave.wav">This media cannot be played.</source></audio></p>
+<p> Clue 4 (9 letters): <audio controls><source src="sounds/microwave.wav">This media cannot be played.</source></audio></p>
 
 <h3> Birds </h3>
 
-<p> Clue 9 (5 letters): <audio controls><source src="sounds/chick.wav">This media cannot be played.</source></audio></p>
+<p> Clue 1 (6 letters): <audio controls><source src="sounds/pigeon.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 10 (6 letters): <audio controls><source src="sounds/pigeon.wav">This media cannot be played.</source></audio></p>
+<p> Clue 2 (4 letters): <audio controls><source src="sounds/duck.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 11 (4 letters): <audio controls><source src="sounds/duck.wav">This media cannot be played.</source></audio></p>
+<p> Clue 3 (7 letters): <audio controls><source src="sounds/chicken.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 12 (7 letters): <audio controls><source src="sounds/chicken.wav">This media cannot be played.</source></audio></p>
+<p> Clue 4 (3 letters): <audio controls><source src="sounds/owl.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 13 (3 letters): <audio controls><source src="sounds/owl.wav">This media cannot be played.</source></audio></p>
+<h3> Instruments </h3>
+
+<p> Clue 1 (9) (: <audio controls><source src="sounds/accordion.wav">This media cannot be played.</source></audio></p>
+
+<p> Clue 2 (5): <audio controls><source src="sounds/kazoo.wav">This media cannot be played.</source></audio></p>
+
+<p> Clue 3 (4): <audio controls><source src="sounds/harp.wav">This media cannot be played.</source></audio></p>
+
+<p> Clue 4 (5): <audio controls><source src="sounds/sitar.wav">This media cannot be played.</source></audio></p>
+
+<p> Clue 5 (9): <audio controls><source src="sounds/washboard.wav">This media cannot be played.</source></audio></p>
 
 <h3> Pop Artists</h3>
 
-<p> Clue 14 (7,6): <audio controls><source src="sounds/britneyspearshard.wav">This media cannot be played.</source></audio></p>
+<p> Clue 1 (7,6): <audio controls><source src="sounds/britneyspearshard.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 15 (8,5): <audio controls><source src="sounds/jlohard.wav">This media cannot be played.</source></audio></p>
+<p> Clue 2 (6,10): <audio controls><source src="sounds/jthard.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 16 (6,10): <audio controls><source src="sounds/jthard.wav">This media cannot be played.</source></audio></p>
+<p> Clue 3 (4,4): <audio controls><source src="sounds/ladygagahard.wav">This media cannot be played.</source></audio></p>
 
-<p> Clue 17 (4,4): <audio controls><source src="sounds/ladygagahard.wav">This media cannot be played.</source></audio></p>
-
-<p> Clue 18 (7): <audio controls><source src="sounds/Beyoncé - Crazy In Love.wav">This media cannot be played.</source></audio></p>
+<p> Clue 4 (7): <audio controls><source src="sounds/Beyoncé - Crazy In Love.wav">This media cannot be played.</source></audio></p>
 
 </body>
 
