some stuff for a puzzle hunt

--- a/puzzlehunt/index.html
+++ b/puzzlehunt/index.html
@@ -41,7 +41,7 @@
 <p> Clue 2 (4 letters): <audio controls><source src="sounds/duck.wav">This media cannot be played.</source></audio></p>
 <br>
 
-<p> Clue 3 (7 letters): <audio controls><source src="sounds/chicken.wav">This media cannot be played.</source></audio></p>
+<p> Clue 3 (7 letters): <audio controls><source src="sounds/hen.wav">This media cannot be played.</source></audio></p>
 <br>
 
 <p> Clue 4 (3 letters): <audio controls><source src="sounds/owl.wav">This media cannot be played.</source></audio></p>
