some stuff for a puzzle hunt

--- a/puzzlehunt/index.html
+++ b/puzzlehunt/index.html
@@ -21,30 +21,30 @@
 
 <h3> Household Machines</h3>
 
-<p> Clue 1 (9 letters) : <audio controls><source src="sounds/lawnmower.wav">This media cannot be played.</source></audio></p>
+<p> Clue 1 (9) : <audio controls><source src="sounds/lawnmower.wav">This media cannot be played.</source></audio></p>
 <br>
 
-<p> Clue 2 (6 letters + "machine"): <audio controls><source src="sounds/washing machine.wav">This media cannot be played.</source></audio></p>
+<p> Clue 2 (7 + "machine"): <audio controls><source src="sounds/washing machine.wav">This media cannot be played.</source></audio></p>
 <br>
 
-<p> Clue 3 (6 letters): <audio controls><source src="sounds/vacuum.wav">This media cannot be played.</source></audio></p>
+<p> Clue 3 (6): <audio controls><source src="sounds/vacuum.wav">This media cannot be played.</source></audio></p>
 <br>
 
-<p> Clue 4 (9 letters): <audio controls><source src="sounds/microwave.wav">This media cannot be played.</source></audio></p>
+<p> Clue 4 (9): <audio controls><source src="sounds/microwave.wav">This media cannot be played.</source></audio></p>
 <br>
 
 <h3> Birds </h3>
 
-<p> Clue 1 (6 letters): <audio controls><source src="sounds/pigeon.wav">This media cannot be played.</source></audio></p>
+<p> Clue 1 (6): <audio controls><source src="sounds/pigeon.wav">This media cannot be played.</source></audio></p>
 <br>
 
-<p> Clue 2 (4 letters): <audio controls><source src="sounds/duck.wav">This media cannot be played.</source></audio></p>
+<p> Clue 2 (4): <audio controls><source src="sounds/duck.wav">This media cannot be played.</source></audio></p>
 <br>
 
-<p> Clue 3 (7 letters): <audio controls><source src="sounds/hen.wav">This media cannot be played.</source></audio></p>
+<p> Clue 3 (7): <audio controls><source src="sounds/hen.wav">This media cannot be played.</source></audio></p>
 <br>
 
-<p> Clue 4 (3 letters): <audio controls><source src="sounds/owl.wav">This media cannot be played.</source></audio></p>
+<p> Clue 4 (3): <audio controls><source src="sounds/owl.wav">This media cannot be played.</source></audio></p>
 <br>
 
 <h3> Instruments </h3>
